[gd_scene load_steps=4 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://walkabout/elements/Task.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 128, 64 )

[node name="Task" type="Node2D"]
script = ExtResource( 2 )

[node name="VisualStuff" type="Node2D" parent="."]

[node name="Icon" type="Sprite" parent="VisualStuff"]
position = Vector2( 0, -64 )
scale = Vector2( 1, 2 )
texture = ExtResource( 1 )

[node name="InteractablePrompt" type="Sprite" parent="VisualStuff"]
position = Vector2( 0, -150 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="InteractBox" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractBox"]
position = Vector2( 0, -64 )
shape = SubResource( 1 )
